--- a/02a_Pediatric.Rmd
+++ b/02a_Pediatric.Rmd
@@ -31,7 +31,7 @@ knitr::opts_chunk$set(message = FALSE,
 ### 1.1.1 Packages
 ```{r 1.1_load-packages}
 library("pacman")
-pacman::p_load("rmarkdown", "tidyverse", "phyloseq", "knitr","kableExtra", "here", "plyr", "ggpubr", "microViz", "readxl", "microbiome", "pheatmap", "vegan", "DirichletMultinomial", "reshape2", "magrittr", "microshades", "pheatmap","vegan", "data.table", "Polychrome", "fantaxtic","cetcolor", "topicmodels", "ldatuning", "cowplot", "MicrobiomeStat", "randomForest", "caret", "mlbench", "MLmetrics", "mia", "here", "patchwork", "digest", "ANCOMBC", "Maaslin2")
+pacman::p_load("rmarkdown", "tidyverse", "phyloseq", "knitr","kableExtra", "here", "plyr", "ggpubr", "microViz", "readxl", "microbiome", "pheatmap", "vegan", "reshape2", "magrittr", "microshades", "pheatmap","vegan", "data.table", "Polychrome", "fantaxtic","cetcolor", "ldatuning", "cowplot", "MicrobiomeStat", "randomForest", "caret", "mlbench", "MLmetrics", "mia", "here", "patchwork", "digest", "ANCOMBC", "Maaslin2", "microbiomeMarker")
 
 here::i_am("02a_Pediatric.Rmd")
 
@@ -52,7 +52,7 @@ plot_colors= c("Abscess" = "#FF495C", "Plaque"="#083D77","abscess" = "#FF495C", 
                "abnormal" = "#FF495C", "control"="#083D77",  "Abnormal" = "#FF495C", "Control"="#083D77"  )
 
 
-core_colors = c("#F76F8E","#083D77","#B8D4E3", "#FAAA00", "#3399FF","#FF495C","#477071", '#03CEA4',  "#5F00BA", "#BDAC9E", "white", "#FFD900")
+core_colors = c("#FAAA00", "#3399FF","#F76F8E","#083D77","#B8D4E3", "#FF495C","#477071", '#03CEA4',  "#5F00BA", "#BDAC9E", "white", "#FFD900")
 
 maaslin2_colors= c("CLR_LOG" = "#2c45b5", "CLR_NONE"="#86B8FD", 
                    "CSS_LOG" = "#FF495C", "CSS_NONE"="#F2929A",
@@ -342,39 +342,8 @@ plot_all_taxa(ps_obj_ped_fs, "TSS", "condition", "Genus", "dot", plot_colors)
 
 
 # 5.0 Core Microbiome
-```{r}
-core_ps <- ps_obj_ped_fs_t_n
 
-# Agglomerate to the species level
-core_ps_species <- tax_glom(core_ps, taxrank = "Species")
-core_ps_genus <- tax_glom(core_ps, taxrank = "Genus")
-
-# Initialize an empty dataframe to store results
-results <- data.frame(prevalence = numeric(), percent_OTUs = numeric())
-
-# Get the total number of OTUs at the species level
-total_OTUs <- length(taxa_names(core_ps_species))
-
-# Loop through prevalence values from 0.1 to 1
-for (p in seq(0.1, 1, by = 0.1)) {
-  core.taxa <- core_members(core_ps_species, detection = 0.00001, prevalence = p)
-  num_OTUs <- length(core.taxa)
-  percent_OTUs <- (num_OTUs / total_OTUs) * 100
-  
-  # Append the results to the dataframe
-  results <- rbind(results, data.frame(prevalence = p*100, percent_OTUs = percent_OTUs))
-}
-
-# Create a line graph using ggplot2
-ggplot(results, aes(x = prevalence, y = percent_OTUs)) +
-  geom_line() +
-  geom_point() +
-  labs(title = "Percent of Total Species Detectioned",
-       x = "Percent of Samples Containing Taxa",
-       y = "Percent of Total Taxa") +
-  theme_minimal()
-```
-
+Original code below, I'm not 100% certain it's correct
 ```{r, fig.height=9, fig.width=7}
 
 # Get the total list of species
@@ -385,7 +354,7 @@ core_genus_list <- list()
 
 # Loop through prevalence values from 0.1 to 1
 for (p in seq(0.1, 1, by = 0.05)) {
-  core.taxa <- core_members(core_ps_genus, detection = 0.00001, prevalence = p)
+  core.taxa <- core_members(core_ps_genus, detection = 0, prevalence = p)
   core_genus_list[[as.character(p)]] <- core.taxa
 }
 
@@ -414,8 +383,6 @@ rownames(core_matrix_genus) <- genus_names
 # Sort the matrix by row sums
 row_sums <- rowSums(core_matrix_genus)
 core_matrix_genus <- core_matrix_genus[order(row_sums, decreasing = TRUE), ]
-
-
 
 # Convert the data frame to row-wise format while keeping row names
 core_df_genus <- core_matrix_genus %>% as.data.frame() %>% rownames_to_column(var="Genera") %>%
@@ -446,7 +413,6 @@ plot <- ggplot(core_df_genus, aes(x = prevalence, y = Genera, fill = value)) +
     legend.text = element_text(size = 8)
   )
 plot
-#ggsave(plot, filename = "~/Desktop/core_genera.png", width = 15, height = 25, units = "cm")
 ```
 
 
@@ -515,7 +481,7 @@ run_Maaslin2(ps_obj = ps_obj_ped_fs,
                                  transform = "LOG", 
                                  plot_colors = plot_colors,
                                  plot_type = "dot", 
-                                 qval_threshold= 0.1, 
+                                 qval_threshold= 0.25, 
                                  plot_heights = c(1, 9))
 ```
 
@@ -529,7 +495,7 @@ run_Maaslin2(ps_obj = ps_obj_ped_fs,
                                  transform = "LOG", 
                                  plot_colors = plot_colors,
                                  plot_type = "dot", 
-                                 qval_threshold= 0.1, 
+                                 qval_threshold= 0.25, 
                                  plot_heights = c(1, 9))
 ```
 
@@ -598,310 +564,4 @@ combine_DA(maaslin2_results_Genus, ancombc2_results_df_Genus, aldex2_res_Genus, 
 combine_DA(maaslin2_results_Species, ancombc2_results_df_Species, aldex2_res_Species, "Type", "Species", c(1,4))
 ```
 
-
-
-
-# 8.0 Topic Modeling
-
-## Genus .001
-
-### Prep and binarize input
-```{r, fig.width=4, fig.height=7}
-#Prepare data from phyloseq object and binarize at a certain threshold of relative abundance
-prep_data_binarize <- function(phy_obj, taxa_level, binarization_threshold){
-  # Extract metadata
-  meta_data <- phy_obj@sam_data %>% 
-    as.matrix() %>% as.data.frame() %>% 
-    dplyr::select(c("Type", "Sample"))
-  
-  #Make counts table - not currently used, but saving this
-  #counts_data <- tax_glom(phy_obj, taxrank = taxa_level, NArm = TRUE) %>%
-  #  psmelt() %>% as.matrix() %>% as.data.frame() %>%
-  #  dplyr::select(c("Sample", "Abundance", taxa_level)) %>%
-  #  pivot_wider(names_from = taxa_level, values_from = "Abundance") %>%
-  #  column_to_rownames(var = "Sample")
-  
-  #Create Relative Abundance Table
-  counts_data <- tax_glom(phy_obj, taxa_level) %>%
-    transform_sample_counts(., function(x) (x + 0.000001 - min(x))) %>%
-    transform_sample_counts(., function(x) (x) / sum(x)) %>% psmelt(.)  %>%
-    dplyr::select(c("Sample", "Abundance", taxa_level)) %>%
-    pivot_wider(names_from = taxa_level, values_from = "Abundance") %>%
-    column_to_rownames(var="Sample") %>%
-    mutate(across(where(is.numeric), ~ ifelse(. > binarization_threshold, 1, 0))) #Apply binarization threshold
-
-  # Extract row names
-  row_names <- rownames(counts_data)
-  
-  # Convert columns to integer
-  counts_data <- as.data.frame(lapply(counts_data, as.integer))
-  
-  # Reassign row names
-  rownames(counts_data) <- row_names
-  
-
-  #Reformat data into long format
-  counts_data_long <- counts_data %>%
-    pivot_longer(
-      cols = everything(), 
-      names_to = "taxa", 
-      values_to = "Count"
-    )
-  
-  #Create a histogram
-  p <- ggplot(counts_data_long, aes(x = Count)) +
-    geom_histogram(binwidth = 0.5, fill = "blue", color = "black", alpha = 0.7) +
-    labs(title = "Histogram of Values", x = "Value", y = "Frequency") +
-    stat_bin(
-        binwidth = 0.5,
-        aes(label = after_stat(count)),
-        geom = "text",
-        vjust = -0.5, # Adjust the vertical position of the text
-        color = "black",
-        size = 3
-    ) +
-    theme_bw()
-  
-  print(p)
-  
-  
-  # Return metadata and counts data as a named list
-  return(list(meta_data = meta_data, counts_data = counts_data))
-  
-}
-
-results_threshold <- prep_data_binarize(ps_obj_ped_fs, "Genus", .001)
-meta_data <- results_threshold$meta_data
-
-counts_data <- results_threshold$counts_data
-```
-
-### Use FindTopicsNumber() 
-Calculates different metrics to estimate the most preferable number of topics for LDA model.
-CaoJuan2009: https://www.sciencedirect.com/science/article/pii/S092523120800372X
-Arun2010: https://link.springer.com/chapter/10.1007/978-3-642-13657-3_43
-
-Questions: How does this relate to perplexity? What about alpha values?
-```{r, fig.width=10, fig.height=5}
-
-RunFindTopicsNumber <- function(counts_data, topics, method){ 
-  result <- FindTopicsNumber(
-      counts_data,
-      topics = topics,
-      metrics = c("Griffiths2004", "CaoJuan2009", "Arun2010", "Deveaud2014"),
-      method = method,
-      control = list(seed = 1234),
-      mc.cores = 2L,
-      verbose = TRUE
-    ) 
-  FindTopicsNumber_plot(result)
-}
-
-topics <- seq(from = 2, to = 50, by = 2)
-RunFindTopicsNumber(counts_data, topics, "Gibbs")
-
-```
-
-### Iteratve over alpha and k-values
-Lower perplexity score = better
-Alpha values: alpha represents document-topic density - with a higher alpha, documents are made up of more topics, and with lower alpha, documents contain fewer topics. 
-Beta represents topic-word density - with a high beta, topics are made up of most of the words in the corpus, and with a low beta they consist of few words.
-```{r, fig.height=12, fig.width=12}
-iterate_alpha_kvalues <- function(counts_data, topic_no_iterations, alpha_iterations, method){
-  
-    # Create an empty dataframe to store results
-  perplexity_alpha_results <- data.frame(
-    k_value = integer(),
-    alpha = numeric(),
-    perplexity = numeric(),
-    stringsAsFactors = FALSE
-  )
-      
-  # Generate all combinations using expand.grid
-      combinations <- expand.grid(topic_no = topic_no_iterations,
-                                  alpha = alpha_iterations)
-      
-      # Convert each row into a list and store in a list
-      iterative_methods <- apply(combinations, 1, function(x) {
-        list(topic_no = x["topic_no"],
-             alpha = x["alpha"])
-        })
-        
-      for (params in iterative_methods) {
-        
-        # Extract parameters for the current iteration
-        k_value <- as.numeric(params$topic_no)
-        alpha <- as.numeric(params$alpha)
-
-        lda_model <- LDA(counts_data, k = k_value, method = method, control = list(seed = 1234, alpha=alpha))
-        perplex = perplexity(lda_model, newdata=as.matrix(counts_data))
-        
-      perplexity_alpha_results <- rbind(
-      perplexity_alpha_results,
-      data.frame(k_value = k_value, alpha = alpha, perplexity = perplex)
-    )
-  }
-
-        # Assuming `results` is the dataframe returned by your function
-    P <- ggplot(perplexity_alpha_results, aes(x = alpha, y = perplexity)) +
-      geom_line() +  # Line for perplexity
-      geom_point() + # Points for clarity
-      facet_wrap(~ k_value, ncol=3) +  # Facet by k_value
-      labs(
-        title = "Perplexity Across Alpha Values for Different k_values",
-        x = "Alpha Value",
-        y = "Perplexity"
-      ) +
-        theme_bw() +
-        theme(
-          strip.text = element_text(size = 12, face = "bold"),  # Facet labels
-          axis.text = element_text(size = 10),
-          axis.title = element_text(size = 12),
-          plot.title = element_text(size = 14, face = "bold")
-        )
-    
-    P
-}
-
-topic_no_iterations <- seq(2, 20, by=2)
-alpha_iterations <- seq(1, 100, by=2)
-iterate_alpha_kvalues(counts_data, topic_no_iterations, alpha_iterations, "Gibbs")
-
-
-```
-
-
-
-### Create the model
-
-https://bookdown.org/josephine_lukito/j381m_tutorial/ldatm.html
-```{r}
-
-#CREATE THE MODEL
-create_topic_model <- function(counts_data, k_value, alpha, method){
-  
-    lda_model <- LDA(counts_data, k = k_value, method = method, control = list(seed = 1234, alpha=alpha))
-    print(paste0("Perplexity is: ", perplexity(lda_model, newdata=as.matrix(counts_data))))
-    
-    b_df <- data.frame(tidytext::tidy(lda_model, matrix = "beta"))
-    g_df <- data.frame(tidytext::tidy(lda_model, matrix = "gamma")) %>%
-        arrange(document, topic)
-    print(paste0("Alpha value is: ", lda_model@alpha))
-  
-    return(list(lda_model = lda_model, b_df = b_df, g_df=g_df))
-}
-
-result <- create_topic_model(counts_data, 6, 1, "Gibbs")
-
-
-```
-
-### Plot beta
-```{r, fig.height=7, fig.width=10}
-#Plot beta, or the numbers that are assigned to each word in a topic. If the beta score is higher, the word matters more in that topic.
-
-plot_beta <- function(lda_result){
-    top_terms <- result$b_df %>% 
-      group_by(topic) %>% #groups by topic
-      top_n(10, beta) %>% #takes the words with the top 10 beta scores
-      ungroup() #ungroups the topic
-    
-    top_terms %>% 
-      ggplot(aes(x = tidytext::reorder_within(term, beta, topic, sep = "_"), 
-                 y =  beta, 
-                 fill = factor(topic))) +
-      geom_bar(stat = 'identity', show.legend = FALSE) +
-      facet_wrap(~ topic, scales = "free") + 
-      coord_flip()
-
-}
-
-plot_beta(results)
-```
-### Heatmap of gamma scores 
-```{r}
-#If you view the topics_wide data frame, you can see that each document has a gamma score for each topic. Some gamma scores are larger than others. This suggests that a document’s content is predominantly in one topic as opposed to another.
-
-heatmap_gamma <- function(lda_results){
-    topics_wide <- result$g_df %>%
-      pivot_wider(names_from = topic,
-                  values_from = gamma)
-
-    topics_wide_type <- meta_data%>% select(c("Type")) %>% 
-      rownames_to_column(var="document") %>% 
-      merge.data.frame(topics_wide, by="document")
-    topics_wide_type <- topics_wide_type[order(topics_wide_type$Type), ]
-    
-    annotations <- topics_wide_type%>% select(c( "document", "Type")) %>%
-      mutate(Type = factor(Type, levels = c("Plaque", "Abscess"))) %>% # Reorder levels
-      remove_rownames() %>% column_to_rownames(var="document")
-        
-    data <- topics_wide_type %>% select(-c("Type")) %>% remove_rownames() %>% column_to_rownames(var="document") %>% t()
-        
-    # Create the heatmap
-    pheatmap(
-          data,
-          annotation_col = annotations,  # Add column annotations
-          scale = "row",               # Scale rows (optional)
-          cluster_rows = TRUE,         # Cluster rows
-          cluster_cols = FALSE,         # Cluster columns
-          color = colorRampPalette(c("blue", "white", "red"))(50),  # Custom color palette
-          show_rownames = TRUE,        # Show row names
-          show_colnames = FALSE         # Show column names
-        )
-}
-
-heatmap_gamma(results)
-```
-
-
-
-
-### UMAP of gamma scores
-```{r}
-library(umap)
-
-plot_gamma_umap <- function(lda_results){
-    topics_wide <- result$g_df %>%
-          pivot_wider(names_from = topic,
-                      values_from = gamma) 
-    
-    res_with_annotations <- meta_data %>% select(c("Type")) %>% 
-          rownames_to_column(var="document") %>% 
-          merge.data.frame(topics_wide, by="document") 
-    
-    #Set UMAP seed
-    custom.config <- umap.defaults
-    custom.config$random_state <- 1234
-    
-    # Run UMAP
-    umap_result <- res_with_annotations %>% select(-c("Type")) %>% column_to_rownames(var="document") %>% umap(., config=custom.config)
-    
-    # Convert the annotations to numeric for coloring
-    annotations <- res_with_annotations %>% column_to_rownames(var="document") %>%  pull(Type)  # Extract "Type" as a vector
-    type_colors <- c("Abscess" = "red", "Plaque" = "blue")  # Assign colors to each type
-    colors <- type_colors[annotations]  # Match colors to each sample
-    
-    # Plot UMAP
-    plot(umap_result$layout, 
-         col = colors,
-         pch = 19,           # Point type
-         xlab = "UMAP 1", 
-         ylab = "UMAP 2", 
-         main = "UMAP Visualization")
-}
-
-plot_gamma_umap(results)
-```
-
-
-
-### Run model and plot
-```{r, fig.width=8, fig.height=6}
-result <- create_topic_model(counts_data, 6, 1, "Gibbs")
-
-plot_beta(results)
-heatmap_gamma(results)
-plot_gamma_umap(results)
-```
 
