--- a/MK_Microbiome_Functions.Rmd
+++ b/MK_Microbiome_Functions.Rmd
@@ -213,6 +213,9 @@ filter_phyloseq <- function(phylo_obj, study, Contam_g, Contam_f, Contam_s) {
   #filter zeros
   phylo_obj_f <- prune_taxa(taxa_sums(phylo_obj_f) > 0, phylo_obj_f)
   
+  #fix taxa with Microviz
+  phylo_obj_f <- tax_fix(phylo_obj_f)
+  
   #Remove values with less than ___ total reads:
   phylo_obj_f<- prune_samples(sample_sums(phylo_obj_f)>= 1000, phylo_obj_f)
   
@@ -1519,6 +1522,420 @@ combine_DA <- function(maaslin2_results, ancombc2_results, aldex2_results, group
 
 ```
 
+#LDA model function
+
+### Iteratively find thresholds
+threshold_iterations <-  seq(.5, 1, by = .05)
+result_table <- find_thresholds_iteratively(ps_obj_ped_fs, "Genus", threshold_iterations)
+```{r}
+find_thresholds_iteratively <- function(psobj, rank, required_percent_taxa_seq) {
+  
+  # Initialize an empty data frame to store results
+  results <- data.frame(
+    required_percent_taxa = numeric(),
+    number_of_numeric_columns = integer(),
+    threshold = numeric(),
+    stringsAsFactors = FALSE
+  )
+
+  # Agglomerate at rank
+  core_ps <- tax_glom(psobj, taxrank = rank)
+  core_ps <- norm_tss(core_ps)
+    
+  # Extract otu matrix and other data (some of which aren't necessary for below, but I'm keeping for future use)
+  otu_mat <- as.matrix(otu_table(core_ps))
+  total_ASVs <- length(rowSums(otu_mat))
+  non_zero_ASVs <- sum(rowSums(otu_mat) > 0)
+    
+  # Find the minimum non-zero value in the entire OTU table
+ min_value <- min(as.vector(otu_mat)[as.vector(otu_mat) > 0], na.rm = TRUE)
+    
+    # Prepare the taxa matrix for filtering
+  tax_mat <- psmelt(core_ps) %>%
+      dplyr::select(c("Sample", "Abundance", rank)) %>%
+      pivot_wider(names_from = rank, values_from = "Abundance")
+  
+  # Loop through each value of required_percent_taxa
+  for (required_percent_taxa in required_percent_taxa_seq) {
+
+    # Find columns that meet the criteria
+    filtered_df <- tax_mat[, colMeans(tax_mat >= min_value, na.rm = TRUE) >= required_percent_taxa]
+    
+    # Ensure the dataframe has stuff in it
+    if (ncol(filtered_df) > 1) {
+      
+        numeric_cols <- filtered_df[, sapply(filtered_df, is.numeric), drop = FALSE]
+        # Count the number of numeric columns
+        num_numeric_cols <- ncol(numeric_cols)
+        
+        # Find the new minimum non-zero value across all numeric columns
+        threshold <- min(numeric_cols[numeric_cols > 0], na.rm = TRUE)
+    } else {
+        # If no numeric columns, set values accordingly
+        num_numeric_cols <- 0
+        threshold <- NA
+    }
+    
+    # Add the result to the results data frame
+    results <- rbind(results, data.frame(
+      required_percent_taxa = required_percent_taxa,
+      number_of_numeric_columns = num_numeric_cols,
+      threshold = threshold,
+      stringsAsFactors = FALSE
+    ))
+  }
+  
+  print(results)
+  # Return the final results table
+  return(results)
+}
+```
+
+
+### Find filtering threshold - set value
+
+threshold <- find_threshold(ps_obj_ped_fs, "Genus", .95)
+threshold
+```{r}
+
+find_threshold <- function(psobj, rank, required_percent_taxa){
+
+        #Agglomerate at rank
+        core_ps <- tax_glom(psobj, taxrank = rank)
+        core_ps <- norm_tss(core_ps)
+
+        #Extract otu matrix and other data (some of which aren't necessary for below, but I'm keeping for future use)
+        otu_mat <- as.matrix(otu_table(core_ps))
+        total_ASVs <- length(rowSums(otu_mat))
+        non_zero_ASVs <- sum(rowSums(otu_mat) > 0)
+        
+        #Find the minimum non-zero value in the entire OTU table, which is what we will pass to the filtering script
+        min_value <- min(as.vector(otu_mat)[as.vector(otu_mat) > 0], na.rm = TRUE)
+        
+        #Prepare the taxa matrix for filtering
+        tax_mat <- psmelt(core_ps) %>%
+            dplyr::select(c("Sample", "Abundance", rank)) %>%
+            pivot_wider(names_from = rank, values_from = "Abundance")
+        
+        # Find columns that meet the criteria: At least x% (defined in the function by user) of the samples have these taxa above a minimum threshold (calculated above)
+        filtered_df <- tax_mat[, colMeans(tax_mat >= min_value, na.rm = TRUE) >= required_percent_taxa]
+        
+        print(filtered_df)
+      if (ncol(filtered_df) > 1) {
+          # Select only numeric columns
+          numeric_cols <- filtered_df[sapply(filtered_df, is.numeric)]
+          
+          # Find the new minimum non-zero value across all numeric columns
+          threshold <- min(numeric_cols[numeric_cols > 0], na.rm = TRUE)
+      } else{
+        threshold = NA
+        print("No taxa retained at this filtering threshold!")
+      }
+        # Return that threshold for later use
+        return(threshold)
+}
+
+``` 
+
+
+
+### Prep and binarize input
+This works for all topic modeling algorithms as a pre-processing step
+
+
+results_threshold <- prep_data_binarize(ps_obj_ped_fs, "Genus", threshold)
+meta_data <- results_threshold$meta_data
+counts_data <- results_threshold$counts_data
+```{r}
+#Prepare data from phyloseq object and binarize at a certain threshold of relative abundance
+prep_data_binarize <- function(phy_obj, taxa_level, binarization_threshold, type_column){
+  # Extract metadata
+  meta_data <- phy_obj@sam_data %>% 
+    as.matrix() %>% as.data.frame() %>% 
+    dplyr::select(c(type_column, "Sample"))
+
+  #Create Relative Abundance Table
+  counts_data <- tax_glom(phy_obj, taxa_level) %>%
+    norm_tss(.) %>% 
+    psmelt(.)  %>%
+    dplyr::select(c("Sample", "Abundance", taxa_level)) %>%
+    pivot_wider(names_from = taxa_level, values_from = "Abundance") %>%
+    column_to_rownames(var="Sample") %>%
+    mutate(across(where(is.numeric), ~ ifelse(. >= binarization_threshold, 1, 0))) #Apply binarization threshold
+
+  # Extract row names
+  row_names <- rownames(counts_data)
+  
+  # Convert columns to integer
+  counts_data <- as.data.frame(lapply(counts_data, as.integer))
+  
+  # Reassign row names
+  rownames(counts_data) <- row_names
+  
+
+  #Reformat data into long format
+  counts_data_long <- counts_data %>%
+    pivot_longer(
+      cols = everything(), 
+      names_to = "taxa", 
+      values_to = "Count"
+    )
+  
+  #Create a histogram
+  p <- ggplot(counts_data_long, aes(x = Count)) +
+    geom_histogram(binwidth = 0.5, fill = "blue", color = "black", alpha = 0.7) +
+    labs(title = "Histogram of Values", x = "Value", y = "Frequency") +
+    stat_bin(
+        binwidth = 0.5,
+        aes(label = after_stat(count)),
+        geom = "text",
+        vjust = -0.5, # Adjust the vertical position of the text
+        color = "black",
+        size = 3
+    ) +
+    theme_bw()
+  
+  print(p)
+  
+  
+  # Return metadata and counts data as a named list
+  return(list(meta_data = meta_data, counts_data = counts_data))
+  
+}
+
+```
+
+
+### Use FindTopicsNumber() 
+Calculates different metrics to estimate the most preferable number of topics for LDA model.
+CaoJuan2009: https://www.sciencedirect.com/science/article/pii/S092523120800372X
+Arun2010: https://link.springer.com/chapter/10.1007/978-3-642-13657-3_43
+
+Questions: How does this relate to perplexity? What about alpha values?
+
+topics <- seq(from = 2, to = 50, by = 2)
+RunFindTopicsNumber(counts_data, topics, "Gibbs")
+```{r}
+RunFindTopicsNumber <- function(counts_data, topics, method){ 
+  result <- FindTopicsNumber(
+      counts_data,
+      topics = topics,
+      metrics = c("Griffiths2004", "CaoJuan2009", "Arun2010", "Deveaud2014"),
+      method = method,
+      control = list(seed = 1234),
+      mc.cores = 2L,
+      verbose = TRUE
+    ) 
+  FindTopicsNumber_plot(result)
+}
+```
+
+
+
+### LDA: Create the model
+Using LDA to create the topic model 
+https://bookdown.org/josephine_lukito/j381m_tutorial/ldatm.html
+
+result <- create_topic_model(counts_data, 2, 1, "Gibbs")
+
+model <- result$lda_model
+```{r}
+#CREATE THE MODEL
+create_topic_model <- function(counts_data, k_value, alpha, method){
+  
+    lda_model <- topicmodels::LDA(counts_data, k = k_value, method = method, control = list(seed = 1234, alpha=alpha))
+    print(paste0("Perplexity is: ", topicmodels::perplexity(lda_model, newdata=as.matrix(counts_data))))
+    
+    b_df <- data.frame(tidytext::tidy(lda_model, matrix = "beta"))
+    g_df <- data.frame(tidytext::tidy(lda_model, matrix = "gamma")) %>%
+        arrange(document, topic)
+    print(paste0("Alpha value is: ", lda_model@alpha))
+  
+    return(list(lda_model = lda_model, b_df = b_df, g_df=g_df))
+}
+```
+
+
+### Plot beta
+plot_beta(result, 15)
+```{r}
+#Plot beta, or the numbers that are assigned to each word in a topic. If the beta score is higher, the word matters more in that topic.
+
+plot_beta <- function(lda_result, n_top_topics){
+    top_terms <- result$b_df %>% 
+      group_by(topic) %>% #groups by topic
+      top_n(n_top_topics, beta) %>% #takes the words with the top 10 beta scores
+      ungroup() #ungroups the topic
+    
+    top_terms %>% 
+      ggplot(aes(x = tidytext::reorder_within(term, beta, topic, sep = "_"), 
+                 y =  beta, 
+                 fill = factor(topic))) +
+      geom_bar(stat = 'identity', show.legend = FALSE) +
+      facet_wrap(~ topic, scales = "free") + 
+      coord_flip() + theme_bw() + scale_fill_viridis_d()
+}
+```
+
+
+### Heatmap of gamma scores 
+heatmap_gamma(result)
+```{r}
+#If you view the topics_wide data frame, you can see that each document has a gamma score for each topic. Some gamma scores are larger than others. This suggests that a document’s content is predominantly in one topic as opposed to another.
+
+heatmap_gamma <- function(lda_results, type_column){
+    
+    topics_wide <- lda_results$g_df %>%
+      pivot_wider(names_from = topic,
+                  values_from = gamma)
+
+    topics_wide_type <- meta_data%>% select(type_column) %>% 
+      rownames_to_column(var="document") %>% 
+      merge.data.frame(topics_wide, by="document") %>%
+      dplyr::arrange(type_column) %>%
+       mutate(!!type_column := as.character(!!sym(type_column))) %>%  # Convert to character to ensure alphabetical sorting
+          dplyr::arrange(!!sym(type_column)) 
+
+    annotations <- topics_wide_type %>%
+          select(c("document", type_column)) %>%
+          remove_rownames() %>%
+          column_to_rownames(var = "document")
+    
+    data <- topics_wide_type %>% 
+      select(-type_column) %>% 
+      remove_rownames() %>% column_to_rownames(var="document") %>% t()
+    
+    # Create the heatmap
+    pheatmap(
+          data,
+          annotation_col = annotations,  # Add column annotations
+          scale = "row",               # Scale rows (optional)
+          cluster_rows = TRUE,         # Cluster rows
+          cluster_cols = FALSE,         # Cluster columns
+          color = colorRampPalette(c("blue", "white", "red"))(50),  # Custom color palette
+          show_rownames = TRUE,        # Show row names
+          show_colnames = TRUE         # Show column names
+        )
+}
+
+
+```
+
+
+### UMAP of gamma scores
+type_colors <- c("Abscess" = "red", "Plaque" = "blue")
+plot_gamma_umap(results, "Type", type_colors)
+
+```{r}
+plot_gamma_umap <- function(lda_results, type_column, type_colors ){
+    topics_wide <- result$g_df %>%
+          pivot_wider(names_from = topic,
+                      values_from = gamma) 
+    
+    res_with_annotations <- meta_data %>% select(type_column) %>% 
+          rownames_to_column(var="document") %>% 
+          merge.data.frame(topics_wide, by="document") 
+    
+    #Set UMAP seed
+    custom.config <- umap.defaults
+    custom.config$random_state <- 1234
+    
+    # Run UMAP
+    umap_result <- res_with_annotations %>% select(-type_column) %>% column_to_rownames(var="document") %>% umap(., config=custom.config)
+    
+    # Convert the annotations to numeric for coloring
+    annotations <- res_with_annotations %>% column_to_rownames(var="document") %>%  pull(type_column)  # Extract "Type" as a vector
+    
+    # Assign colors to each type
+    colors <- type_colors[annotations]  # Match colors to each sample
+    
+    # Plot UMAP
+    plot(umap_result$layout, 
+         col = colors,
+         pch = 19,           # Point type
+         xlab = "UMAP 1", 
+         ylab = "UMAP 2", 
+         main = "UMAP Visualization")
+}
+```
+
+###Membership of topic by Type
+```{r}
+topic_membership <- function(lda_result, type_column, colors){
+  
+      topics_wide <- lda_result$g_df %>%
+            pivot_wider(names_from = topic,
+                        values_from = gamma)
+      
+      topics_long_type <- meta_data%>% select(type_column) %>% 
+            rownames_to_column(var="document") %>% 
+            merge.data.frame(topics_wide, by="document") %>%
+        pivot_longer(cols = -c(document, type_column), 
+                     names_to = "topic", 
+                     values_to = "gamma")
+
+      topics_long_type %>%
+        ggplot(aes(type_column, gamma, fill=!!sym(type_column))) +
+        geom_boxplot() +
+        scale_fill_manual(values= colors) +
+        facet_wrap(~ topic) +
+        labs(x = "topic", y = expression(gamma)) +
+        theme_bw()
+}
+```
+
+
+
+### Heatmap of rel abundance in original data of top taxa
+This is throwing an error with some ps objects, so I need to troubleshoot
+```{r}
+relab_heatmap <- function(lda_results, psobj, rank, type_column, topic_no, n_top_words){
+
+    #Gather a list of all the most important taxa(words) in the topic
+    taxa_list <- lda_results$b_df %>%
+      filter(topic == topic_no) %>%
+      top_n(n_top_words, beta) %>% #takes the words with the top 10 beta scores
+      distinct(term) %>%
+      pull(term)
+    
+    #Agglomerate your phyloseq object at the desired level
+    core_ps <- tax_glom(psobj, taxrank = rank)
+    core_ps <- norm_tss(core_ps)
+    
+    tax_mat <- psmelt(core_ps) %>%
+                dplyr::select(c("Sample", "Abundance", rank)) %>%
+                pivot_wider(names_from = rank, values_from = "Abundance") %>%
+                select(any_of(taxa_list), Sample)
+    
+    tax_mat_type <- meta_data%>% select(type_column) %>% 
+          rownames_to_column(var="Sample") %>% 
+          merge.data.frame(tax_mat, by="Sample")%>%
+          mutate(!!type_column := as.character(!!sym(type_column))) %>%  # Convert to character to ensure alphabetical sorting
+          dplyr::arrange(!!sym(type_column)) 
+    
+        annotations <- tax_mat_type %>%
+          select(c("Sample", type_column)) %>%
+          remove_rownames() %>%
+          column_to_rownames(var = "Sample")
+            
+    data <- tax_mat_type %>% 
+      select(-type_column) %>% 
+      remove_rownames() %>% column_to_rownames(var="Sample") %>% t()
+
+    pheatmap(log2(data + .00001),
+              annotation_col = annotations,  # Add column annotations
+              #scale = "row",               # Scale rows (optional)
+              cluster_rows = FALSE,         # Cluster rows
+              cluster_cols = FALSE,         # Cluster columns
+              color = colorRampPalette(c("blue", "white", "red"))(50),  # Custom color palette
+              show_rownames = TRUE,        # Show row names
+              show_colnames = FALSE,    
+             main = paste0("Topic ", topic_no)
+            )  
+
+}
+
+```
 
 #Save
 ```{r}
@@ -1535,6 +1952,16 @@ save(construct_phyloseq,
      iterate_aldex2,
      run_aldex2,
      combine_DA,
+     find_thresholds_iteratively,
+     find_threshold,
+     prep_data_binarize,
+     RunFindTopicsNumber,
+     create_topic_model,
+     plot_beta,
+     heatmap_gamma,
+     plot_gamma_umap,
+     topic_membership,
+     relab_heatmap,
      file = "MK_Microbiome_Functions.RData")
 ```
 
